# qjs-test

./: CMakeLists.txt  README.md  console.c  main.c  test.js  test2.js  utils.h
.devcontainer/: Dockerfile  devcontainer.json
src/: console.c  console.h  fs.c  fs.h  main.c
